--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Marsiyah Player</title><!--<%= htmlWebpackPlugin.options.title %>-->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="author" content="Mohammed S Hirani" />
+    <meta
+      name="description"
+      content="Basic Music Player created using Vue.Js"
+    />
+    <meta
+      name="keywords"
+      content="Vue, VueJs, Music Player,Beginner Music Player"
+    />
+    <meta name="revised" content="Thursday, December 18th,2020" />
+    >
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>Marsiyah Player</title>
+    <!--<%= htmlWebpackPlugin.options.title %>-->
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
